# cpp-archiver

./: .gitignore  .gitmodules  CMakeLists.txt  readme.md
.github/workflows/: test.yml
inc/: arguments.hpp  compression.hpp  compression_enums.hpp  main.hpp  tar.hpp
src/: arguments.cpp  compression.cpp  main.cpp  tar.cpp
test_files/: sample_archive.tar.7z
